# SeewoTool

./: .gitattributes  CMakeLists.txt  ClassTime.csv  LittleWindow.cpp  README.md  SeewoTool.md  csv.cpp  gui.cpp  index.html  main.cpp
include/: IsUsb.h  csv.h  gui.h  tools.h
